--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,34 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+.list-item {
+  list-style: none;
+  display: flex;
+  font-weight: 600;
+}
+
+.country {
+  display: flex;
+  align-items: center;
+}
+.country-info {
+  padding-bottom: 20px;
+  padding-left: 20px;
+}
+
+.country-img {
+  width: 32px;
+  height: 32px;
+  margin-right: 10px;
+}
+
+.headers {
+  font-weight: 700;
+}
+
+.value {
+  margin-left: 10px;
+  font-size: 15px;
+  font-weight: 500;
+}
